# proton-mail-trash

./: .gitignore  .pre-commit-config.yaml  README.md  proton_mail_trash.py  pyproject.toml  renovate.json
.github/: renovate.json5
.github/workflows/: release.yml
src/proton_mail_trash/: __init__.py  golang.py  hydroxide.py  main.py
